--- a/style.css
+++ b/style.css
@@ -16,3 +16,17 @@ canvas {
     width: 500px;
     height: 500px;
 }
+
+.controls {
+    position: absolute;
+    z-index: 10;
+    top: 30px;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.controls,
+select,
+option {
+    font-size: 25px;
+}
